# llama.cpp

./: .cirrus.yml  .clang-tidy  .dockerignore  .ecrc  .editorconfig  .flake8  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .mcp.json  .pre-commit-config.yaml  1  AGENTS.md  AGENT_PERSONAS.md  AGENT_TASK_ASSIGNMENTS.md  AUDIT.md  AUDIT_SUMMARY.md  AUTHORS  AUTHORS.txt  BRANCH_RULES.md  BUILD-INSTRUCTIONS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CODEOWNERS  CODE_REVIEW_lwt_3_LUT.md  CODE_REVIEW_lwt_3_LUT_COMPREHENSIVE.md  COMMAND_LINE_UPDATES.md  COMPLETE_PROJECT_REPORT.md  CONTENT_MARKERS_ISSUE_ANALYSIS.md  CONTRACT.md  CONTRIBUTING.md  CPPLINT.cfg  DEPLOY.md  DOCS_FIX_10932.md  DSV4-MTP-PLAN.md  Dockerfile  Dockerfile.atlas  FAIRY2I_W2_LLAMA_CPP_ADAPTATION_PLAN.md  (+252 more)
app/: CMakeLists.txt  app-update.cpp  app-update.h  download.cpp  llama.cpp
ax-tests/: CMakeLists.txt  README.md  test-backend-axelera.cpp
ci/: README.md  (+1 more)
examples/cogagent/: CMakeLists.txt  cogagent-cli.cpp  cogagent.h  cogagent_util.cpp  cogagent_util.h  cross_vision.cpp  cross_vision.h  image_util.cpp  image_util.h  vision_encoder.cpp  vision_encoder.h
examples/diffusion/: CMakeLists.txt  README.md  diffusion-cli.cpp  diffusion-dream-cli.cpp  diffusion-llada-cli.cpp  diffusion.cpp  diffusion.h
examples/diffusion-gemma/: CMakeLists.txt  diffusion-gemma-cli.cpp  diffusion-gemma-server.cpp
examples/eval-callback/: CMakeLists.txt  README.md  eval-callback.cpp
examples/gguf-hash/: CMakeLists.txt  README.md  gguf-hash.cpp
examples/kv-cache-monitor/: CMakeLists.txt  KQV_TRACE_README.md  README.md  flash-attn-mixed-verify.cpp  gguf-reader.cpp  kqv-tensor-reader.cpp  kqv-trace-monitor.cpp  kv-cache-monitor.cpp  kv-quant-monitor.cpp  tensor-diff-analyzer.cpp
examples/llama-profiler/: CMakeLists.txt  profiler-common.h  profiler-cpu.cpp  profiler-gpu.cpp
examples/minicpmv2.0/: CMakeLists.txt  README.md  clip.cpp  convert-image-encoder-to-gguf.py  minicpm-surgery.py  minicpmv-cli.cpp  minicpmv.cpp  minicpmv.h  requirements.txt
examples/tts/: CMakeLists.txt  README.md  default_speaker.h  orpheus-tts.cpp  tts-outetts-v1.cpp  tts.cpp
examples/verifiable-inference/: CMakeLists.txt  README.md  verifiable-inference.cpp
infcore/: .gitignore  CMakeLists.txt  LICENSE  NOTICE  README.md  sbom.cdx.json
infcore/THIRD_PARTY_LICENSES/: README.md  cpp-httplib.txt  ggml-llama.cpp.txt  miniaudio.txt  nlohmann-json.txt  sheredom.txt  stb.txt
infcore/cli/: CMakeLists.txt  main.cpp
infcore/cmake/: profile-rf.cmake
infcore/config/: gateway.yaml
infcore/docs/: ARCHITECTURE.md  COMPLIANCE.md  DEPLOY.md  STATUS.md
infcore/gateway/: CMakeLists.txt  config.cpp  config.hpp  json_schema.cpp  json_schema.hpp  main.cpp  schema_embedded.h.in  server.cpp  server.hpp
infcore/model-toolkit/: README.md  model-toolkit.sh
infcore/observability/: CMakeLists.txt  metrics.cpp
infcore/registry/: CMakeLists.txt  model_registry.cpp  model_registry.h
infcore/runtime/: CMakeLists.txt  backend_supervisor.cpp  backend_supervisor.h
infcore/scripts/: build.sh  update-upstream.sh
infcore/security/: CMakeLists.txt
infcore/tests/: CMakeLists.txt  pytest.ini
llamax/: CMakeLists.txt  README.MD  llamaxConfig.cmake.in
llamax/examples/: CMakeLists.txt  README.MD  chat.cpp  grammar.cpp  simple.cpp
llamax/include/: llamax.h
llamax/src/: llamax.cpp
ppu_so/: .gitignore  CMakeLists.txt  README.md
ppu_so/fa/: flash_api_c.cpp  test_fa.cpp
ppu_so/fa3/: build_fa3.sh  flash3_api_c.cpp
ppu_so/gdn/: aot_chunk.py  aot_recurrent.py  build.sh  gen_chunk_jit.py  gen_chunk_so.py  gen_golden_chunk.py  gen_golden_recurrent.py  test_abi.c
ppu_so/moe/: deepgemm_c.cpp  test_moe.cpp
ppu_so/patches/: 0001-deepgemm-no-torch-cublaslt.patch
src/: AGENTS.md  CLAUDE.md  CMakeLists.txt  g4v-prompt.md  llama-adapter.cpp  llama-adapter.h  llama-arch.cpp  llama-arch.h  llama-backend-sampler.cpp  llama-batch.cpp  llama-batch.h  llama-benchmark.cpp  llama-benchmark.h  llama-block-pool.cpp  llama-block-pool.h  llama-chat.cpp  llama-chat.h  llama-context-hash.cpp  llama-context-hash.h  llama-context-pshard.cpp  llama-context.cpp  llama-context.h  llama-cparams.h  llama-debug.cpp  llama-deepseek4-hot.cpp  llama-deepseek4-hot.h  llama-engram.cpp  llama-engram.h  llama-ext.h  llama-ffn-local.cpp  llama-ffn-local.h  llama-gpu-sampling.cpp  llama-gpu-sampling.h  llama-grammar.cpp  llama-grammar.h  llama-graph.cpp  llama-graph.h  llama-hf-config.cpp  llama-hf-config.h  llama-hot-experts.cpp  (+133 more)
src/beam-search/: beam-search.cpp  beam-search.h
src/models/: afmoe.cpp  apertus.cpp  arcee.cpp  arctic.cpp  arwkv7.cpp  baichuan.cpp  bailingmoe.cpp  bailingmoe2.cpp  bert.cpp  bitnet.cpp  bloom.cpp  chameleon.cpp  chatglm.cpp  codeshell.cpp  cogvlm.cpp  cohere2-iswa.cpp  cohere2-moe.cpp  cohere2.cpp  cohere2_iswa.cpp  cohere2moe.cpp  command-r.cpp  dbrx.cpp  deci.cpp  deepseek.cpp  deepseek2.cpp  deepseek2ocr.cpp  deepseek32.cpp  deepseek4.cpp  delta-net-base.cpp  delta.cpp  dflash.cpp  diffusion-gemma.cpp  diffusion-gemma4.cpp  dots1.cpp  dream.cpp  dspark.cpp  eagle3.cpp  engram.cpp  (+355 more)
tests/: .gitignore  6500xt_benchmark.ps1  CLAUDE.md  CMakeLists.txt  README-IFAIRY-TESTS.md  TEST_IMPLEMENTATION_DETAILS.md  TEST_TILED_WEIGHT_LOADING_README.md  bench-attn-mask.cpp  bench-tq3-load-tiles.cu  bench-tq3-native-dot.cu  cross_arch_benchmark.ps1  debug-template-parser.cpp  gguf-model-data.cpp  gguf-model-data.h  kv_cache_alloc_test.py  req.http  run-numa-integration-test.sh  run_all.sh  run_blue_benchmarks.sh  test-alloc.cpp  test-arg-parser.cpp  test-attention-determinism.cpp  test-attn-mask-knowledge.cpp  test-attn-mask.cpp  test-auto-parser-generation.cpp  test-auto-parser-grammar.cpp  test-backend-copy.cpp  test-backend-ops.cpp  test-backend-sampler.cpp  test-backend-sched-cuda.cpp  test-backend-sched.cpp  test-barrier.cpp  test-batch-alloc.cpp  test-chat-auto-parser-helpers.cpp  test-chat-auto-parser.cpp  test-chat-parser-combinator.cpp  test-chat-parser-comparison.cpp  test-chat-parser.cpp  test-chat-peg-parser-minicpm5.cpp  test-chat-peg-parser.cpp  (+255 more)
(+5708 files in other folders)
